@@ -1,7 +1,7 @@
 Create a single-page app in a single HTML file with the following requirements:
 - Name: Hangman
 - Goal: guess all the hidden letters in the secret word
-- the UI is monochrome: black and green. The color are like a Commodore PET from 1979
+- the UI is monochrome: black and green. The color are like a Commodore PET from 1979, but a little more dim.
 - all letters that are printed are in upper case
 - the top of the screen is centered and says HANGMAN
 - at the left of the screen is a hangman's hook
