@@ -8,7 +8,7 @@
 <style>
     body {
         background: black;
-        color: #00FF66; /* PET-green */
+        color: #22BB66; /* PET-green */
         font-family: "Courier New", Courier, monospace;
         text-transform: uppercase;
         margin: 0;
@@ -50,7 +50,7 @@
     .slot {
         display: inline-block;
         min-width: 28px;
-        border-bottom: 2px solid #00FF66;
+        border-bottom: 2px solid #22BB66;
         margin: 0 6px;
         font-size: 1.6rem;
         text-align: center;
@@ -66,7 +66,7 @@
         margin: 25px auto 0 auto;
         width: calc(100% - 40px);
         max-width: 1100px;
-        border: 2px solid #00FF66;
+        border: 2px solid #22BB66;
         padding: 10px;
         min-height: 45px;
         box-sizing: border-box;
@@ -78,7 +78,7 @@
 
     .gLetter {
         padding: 4px 6px;
-        border: 1px solid #007f33;
+        border: 1px solid #226f33;
         min-width: 22px;
         text-align: center;
         font-weight: bold;
@@ -99,12 +99,12 @@
 
 <div id="main">
     <div id="hookArea">
-        <svg width="180" height="260" stroke="#00FF66" fill="none" stroke-width="3">
+        <svg width="180" height="260" stroke="#22BB66" fill="none" stroke-width="3">
             <!-- Hook -->
             <line x1="40" y1="10" x2="40" y2="230"/>
             <line x1="40" y1="10" x2="120" y2="10"/>
             <path d="M120 10 C140 35 100 45 100 70"/>
-            <circle cx="100" cy="70" r="4" fill="#00FF66"/>
+            <circle cx="100" cy="70" r="4" fill="#22BB66"/>
 
             <!-- Hangman pieces -->
             <circle id="p1" cx="100" cy="95" r="18" visibility="hidden" />
