@@ -139,7 +139,7 @@ I selected most states, and the highest profiles capitals (that match rules). Th
 the count up to 419.
 
 
-Version 14	14 minutes dev	1 minutes code		1 minute test
+Version 14	14 minutes dev	1 minutes code		1 minute test	 3 hour 27
 
 Try the proportion of rare letters now. Both of these are easy to do manually.
 Words starting with...
@@ -158,13 +158,21 @@ I also added some cases (12) where the word exists, not as the first letter:
 INJURED, REJECTED, MAJORITY, REQUEST, FREQUENT, EQUATOR, AQUATIC, CITIZEN, BLAZING, HORIZON, SEIZURE
 
 
+Version 15	6 minutes dev	0 minutes code		2 minutes test	3 hour 35
+
+There were comments the screen is too bright, too glaring. How good is good enough. The color was easy
+to find; it is separately defined in each section, but the color (with one exception is the same). Dropped
+green a bit, raised the blue even less. Maybe it'll help? We'll see.
+
+
+TODO even in a game with 400+ words, I had the exact word repeated. Keep a cache to avoid repeats.
+	I think keeping a list of 200 words then emptying isn't perfect... but is easy an close
+	enough.
 TODO There have been words of different length added for balance. Check again.
 TODO The latest 8-letter word addition did all 30 words starting with A to E. Look for distribution
 	of lead words; add more to balance out more common starting letters as needed.
 	(K only has 3, Y only has 2)
+TODO add months of the year that meet rules
 TODO some people like the guesses shown in alpha order. Some like chrono. Support switching; start
 	with chrono
-TODO some say the green is too bright. Adjust color to be a bit more mild. Just a bit.
-
-
 
